@@ -6056,7 +6056,7 @@ global.WAIT = function(fnValid, fnCallback, timeout, interval) {
 
 	id_timeout = setTimeout(function() {
 		clearInterval(id_interval);
-		fnCallback && fnCallback(new Error('Timeout.'), false);
+		fnCallback && fnCallback(new Error('Timeout'), false);
 	}, timeout || 5000);
 };
 
@@ -6111,8 +6111,9 @@ function MultipartParser(multipart, stream, callback) {
 	self.stream = stream;
 	self.stream.on('data', self.ondata);
 	self.stream.on('end', self.onend);
-	// self.stream.on('close', self.onclose);
+	self.stream.on('close', self.onclose);
 	self.stream.on('abort', self.onclose);
+	self.stream.on('aborted', self.onclose);
 }
 
 MultipartParser.prototype.free = function(err) {
@@ -6124,8 +6125,9 @@ MultipartParser.prototype.free = function(err) {
 
 	self.stream.removeListener('data', self.ondata);
 	self.stream.removeListener('end', self.onend);
-	// self.stream.removeListener('close', self.onclose);
+	self.stream.removeListener('close', self.onclose);
 	self.stream.removeListener('abort', self.onclose);
+	self.stream.removeListener('aborted', self.onclose);
 	self.current.stream && self.current.stream.end();
 	self.stream = null;
 	self.buffer = null;
